ghc-4335c07/testsuite/tests/ffi/should_compile/cc014.hs
module Blah ( foo ) where
import Foreign.Ptr ( FunPtr )
type Bar = Int -> Double -> Double -> Double -> IO ()
foreign import ccall unsafe "dynamic" foo :: FunPtr Bar -> Bar
