ghc-4335c07/testsuite/tests/ffi/should_fail/T7506.hs
module Foo where

import Foreign.Ptr

-- foreign import ccall "stdio.h &putchar" c_putchar :: () -> FunPtr (Char -> IO ())
foreign import ccall "stdio.h &putchar" c_putchar :: Int -> IO ()
